--- a/index.html
+++ b/index.html
@@ -3,26 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My GitHub Pages Website</title>
+    <title>Tale Index - AI-Driven Storytelling Insights</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
-        }
-        h1 {
-            color: #4CAF50;
-        }
-        p {
-            font-size: 18px;
+            font-family: 'Inter', sans-serif;
         }
     </style>
 </head>
-<body>
-    <h1>Welcome to My GitHub Pages Website!</h1>
-    <p>This is a simple page to verify that the hosting is working.</p>
-    <p>If you see this page, your GitHub Pages site is live!</p>
+<body class="bg-gray-100">
+    <header class="bg-white shadow-sm">
+        <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
+            <div class="flex items-center">
+                <svg class="h-8 w-8 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+                </svg>
+                <span class="ml-2 text-2xl font-bold text-gray-800">Tale Index</span>
+            </div>
+            <div class="hidden md:flex items-center space-x-4">
+                <a href="#features" class="text-gray-600 hover:text-blue-500">Features</a>
+                <a href="#about" class="text-gray-600 hover:text-blue-500">About</a>
+                <a href="#contact" class="text-gray-600 hover:text-blue-500">Contact</a>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section class="bg-blue-600 text-white py-20">
+            <div class="container mx-auto px-6 text-center">
+                <h1 class="text-4xl md:text-6xl font-bold mb-4">Unlock the Power of Storytelling with AI-Driven Insights</h1>
+                <p class="text-xl mb-8">Boost Your Marketing Campaigns with Predictive Storytelling Performance</p>
+                <a href="#" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold hover:bg-blue-100 transition duration-300">Get Started</a>
+            </div>
+        </section>
+
+        <section id="features" class="py-20">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center mb-8">What We Do</h2>
+                <div class="grid md:grid-cols-2 gap-8">
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <svg class="h-12 w-12 text-blue-500 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
+                        </svg>
+                        <h3 class="text-xl font-semibold mb-2">Predict Story Impact</h3>
+                        <p class="text-gray-600">Our platform analyzes your story and predicts its performance, helping you fine-tune your content before it reaches the audience.</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <svg class="h-12 w-12 text-blue-500 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z" />
+                        </svg>
+                        <h3 class="text-xl font-semibold mb-2">Optimize Audio</h3>
+                        <p class="text-gray-600">Enhance your audio content for maximum engagement and impact, ensuring your message resonates with your audience.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="about" class="bg-gray-100 py-20">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center mb-8">About Tale Index</h2>
+                <p class="text-gray-600 text-center max-w-2xl mx-auto">At Tale Index, we help you craft marketing strategies that truly resonate with your audience. Our SaaS platform predicts how your story will perform in the consumer market before it's published. Using our unique storytelling index, you can measure and adjust your content to maximize impact.</p>
+            </div>
+        </section>
+
+        <section id="contact" class="py-20">
+            <div class="container mx-auto px-6">
+                <h2 class="text-3xl font-bold text-center mb-8">Ready to Transform Your Storytelling?</h2>
+                <form class="max-w-md mx-auto">
+                    <div class="mb-4">
+                        <label for="email" class="block text-gray-700 font-semibold mb-2">Email Address</label>
+                        <input type="email" id="email" name="email" placeholder="you@example.com" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                    </div>
+                    <button type="submit" class="w-full bg-blue-600 text-white px-4 py-2 rounded-md font-semibold hover:bg-blue-700 transition duration-300">Get Started</button>
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <footer class="bg-gray-800 text-white py-8">
+        <div class="container mx-auto px-6">
+            <div class="flex flex-col md:flex-row justify-between items-center">
+                <div class="mb-4 md:mb-0">
+                    <span class="text-2xl font-bold">Tale Index</span>
+                </div>
+                <div class="flex space-x-4">
+                    <a href="#" class="hover:text-blue-400">Terms of Service</a>
+                    <a href="#" class="hover:text-blue-400">Privacy Policy</a>
+                </div>
+            </div>
+            <div class="mt-8 text-center text-gray-400 text-sm">
+                &copy; 2023 Tale Index. All rights reserved.
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
-
