--- a/index.html
+++ b/index.html
@@ -91,13 +91,14 @@
             <div class="container mx-auto px-6">
                 <div class="bg-white bg-opacity-90 p-8 rounded-lg max-w-md mx-auto">
                     <h2 class="text-3xl font-bold text-center mb-8">Ready to Transform Your Storytelling?</h2>
-                    <form>
+                    <form id="subscribeForm">
                         <div class="mb-4">
                             <label for="email" class="block text-gray-700 font-semibold mb-2">Email Address</label>
                             <input type="email" id="email" name="email" placeholder="you@example.com" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
                         </div>
-                        <button type="submit" class="w-full bg-blue-600 text-white px-4 py-2 rounded-md font-semibold hover:bg-blue-700 transition duration-300">Get Started</button>
+                        <button type="submit" class="w-full bg-blue-600 text-white px-4 py-2 rounded-md font-semibold hover:bg-blue-700 transition duration-300">Subscribe</button>
                     </form>
+                    <div id="subscriptionMessage" class="mt-4 text-center hidden"></div>
                 </div>
             </div>
         </section>
@@ -119,5 +120,40 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        document.getElementById('subscribeForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            var email = document.getElementById('email').value;
+            
+            // Replace this URL with your Google Apps Script Web App URL
+            var url = 'https://script.google.com/macros/s/AKfycbxrQYoGZq-4agr0scVezRvr08acKqhf4YafIeeI1GTWINQqG_EmOFwKkkRPgYJoXpgXIA/exec';
+
+            fetch(url, {
+                method: 'POST',
+                mode: 'no-cors',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ email: email })
+            })
+            .then(response => {
+                var messageElement = document.getElementById('subscriptionMessage');
+                messageElement.textContent = 'Thank you for subscribing!';
+                messageElement.classList.remove('hidden');
+                messageElement.classList.add('text-green-600');
+
+                // Clear the form
+                document.getElementById('email').value = '';
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                var messageElement = document.getElementById('subscriptionMessage');
+                messageElement.textContent = 'An error occurred. Please try again later.';
+                messageElement.classList.remove('hidden');
+                messageElement.classList.add('text-red-600');
+            });
+        });
+    </script>
 </body>
 </html>
