--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <section class="hero-bg text-white py-32 md:py-64">
             <div class="container mx-auto px-6 text-center">
                 <div class="bg-black bg-opacity-50 p-8 rounded-lg inline-block">
-                    <h1 class="text-4xl md:text-6xl font-bold mb-4">Unlock the Power of Storytelling with AI-Driven Insights</h1>
-                    <p class="text-xl mb-8">Boost Your Marketing Campaigns with Predictive Storytelling Performance</p>
+                    <h1 class="text-4xl md:text-6xl font-bold mb-4">Unlock the power of storytelling with AI & NeuroScience Driven Insights</h1>
+                    <p class="text-xl mb-8">Map, Align, Optimise and Collaborate with Analytical Storytelling”</p>
                     <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-full font-semibold hover:bg-blue-700 transition duration-300">Get Started</a>
                 </div>
             </div>
@@ -66,15 +66,15 @@
                         <svg class="h-12 w-12 text-blue-500 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
                         </svg>
-                        <h3 class="text-xl font-semibold mb-2">Predict Story Impact</h3>
-                        <p class="text-gray-600">Our platform analyzes your story and predicts its performance, helping you fine-tune your content before it reaches the audience.</p>
+                        <h3 class="text-xl font-semibold mb-2">Indexing Creative AudioVisual Products</h3>
+                        <p class="text-gray-600">Our platform analyses and tests your story in pre production and production phase, giving you iterative feedback to finetune your production before it reaches the post production phase.</p>
                     </div>
                     <div class="bg-white bg-opacity-90 p-6 rounded-lg shadow-md">
                         <svg class="h-12 w-12 text-blue-500 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-8a3 3 0 01-3-3V5a3 3 0 116 0v6a3 3 0 01-3 3z" />
                         </svg>
-                        <h3 class="text-xl font-semibold mb-2">Optimize Audio</h3>
-                        <p class="text-gray-600">Enhance your audio content for maximum engagement and impact, ensuring your message resonates with your audience.</p>
+                        <h3 class="text-xl font-semibold mb-2">Optimizing Operations</h3>
+                        <p class="text-gray-600">Enhance your efficiency and productivity with transparent visibility to all teams, consolidating communications, Data Analytics to make sure content resonates with your strategy.</p>
                     </div>
                 </div>
             </div>
