--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             background-position: center;
         }
     </style>
+    <link rel="icon" href="https://drive.google.com/file/d/1-HUk0m0b98Yw0dCeL-ZJjgYaqim6XOCy/view?usp=sharing" type="image/x-icon">
 </head>
 <body class="bg-gray-100">
     <header class="bg-white bg-opacity-90 shadow-sm fixed w-full z-10">
@@ -51,8 +52,8 @@
         <section class="hero-bg text-white py-32 md:py-64">
             <div class="container mx-auto px-6 text-center">
                 <div class="bg-black bg-opacity-50 p-8 rounded-lg inline-block">
-                    <h1 class="text-4xl md:text-6xl font-bold mb-4">Unlock the power of storytelling with AI & NeuroScience Driven Insights</h1>
-                    <p class="text-xl mb-8">Map, Align, Optimise and Collaborate with Analytical Storytelling”</p>
+                    <h1 class="text-4xl md:text-6xl font-bold mb-4">Unlock the power of storytelling</h1>
+                    <p class="text-xl mb-8">with AI and NeuroScience Driven Insights</p>
                     <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-full font-semibold hover:bg-blue-700 transition duration-300">Get Started</a>
                 </div>
             </div>
@@ -83,20 +84,20 @@
         <section id="about" class="about-bg py-20">
             <div class="container mx-auto px-6">
                 <h2 class="text-3xl font-bold text-center mb-8 text-white">About Tale Index</h2>
-                <p class="text-white text-center max-w-2xl mx-auto">At Tale Index, we help you craft marketing strategies that truly resonate with your audience. Our SaaS platform predicts how your story will perform in the consumer market before it's published. Using our unique storytelling index, you can measure and adjust your content to maximize impact.</p>
+                <p class="text-white text-center max-w-2xl mx-auto">At Tale Index, we encourage you to craft marketing strategies that truly engage your audience. Our SaaS platform will provide you with a performance in the market before get published. Using the unique Tale index, you can measure, adjust and maximise the impact of the story.</p>
             </div>
         </section>
 
         <section id="contact" class="contact-bg py-20">
             <div class="container mx-auto px-6">
                 <div class="bg-white bg-opacity-90 p-8 rounded-lg max-w-md mx-auto">
-                    <h2 class="text-3xl font-bold text-center mb-8">Ready to Transform Your Storytelling?</h2>
+                    <h2 class="text-3xl font-bold text-center mb-8">Want to learn how this magic works?</h2>
                     <form id="subscribeForm">
                         <div class="mb-4">
                             <label for="email" class="block text-gray-700 font-semibold mb-2">Email Address</label>
                             <input type="email" id="email" name="email" placeholder="you@example.com" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
                         </div>
-                        <button type="submit" class="w-full bg-blue-600 text-white px-4 py-2 rounded-md font-semibold hover:bg-blue-700 transition duration-300">Subscribe</button>
+                        <button type="submit" class="w-full bg-blue-600 text-white px-4 py-2 rounded-md font-semibold hover:bg-blue-700 transition duration-300">Get Details</button>
                     </form>
                     <div id="subscriptionMessage" class="mt-4 text-center hidden"></div>
                 </div>
@@ -116,7 +117,7 @@
                 </div>
             </div>
             <div class="mt-8 text-center text-gray-400 text-sm">
-                &copy; 2023 Tale Index. All rights reserved.
+                &copy; 2024 Tale Index. All rights reserved.
             </div>
         </div>
     </footer>
@@ -139,7 +140,7 @@
             })
             .then(response => {
                 var messageElement = document.getElementById('subscriptionMessage');
-                messageElement.textContent = 'Thank you for subscribing!';
+                messageElement.textContent = 'Thank you for sharing your email. We’ll be in touch with you shortly!';
                 messageElement.classList.remove('hidden');
                 messageElement.classList.add('text-green-600');
 
