--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             background-position: center;
         }
     </style>
-    <link rel="icon" href="https://drive.google.com/file/d/1-HUk0m0b98Yw0dCeL-ZJjgYaqim6XOCy/view?usp=sharing" type="image/x-icon">
+    <link rel="icon" href="https://drive.google.com/uc?export=view&id=1-HUk0m0b98Yw0dCeL-ZJjgYaqim6XOCy" type="image/x-icon">
 </head>
 <body class="bg-gray-100">
     <header class="bg-white bg-opacity-90 shadow-sm fixed w-full z-10">
