--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tale Index - AI-Driven Storytelling Insights</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -35,10 +36,8 @@
     <header class="bg-white bg-opacity-90 shadow-sm fixed w-full z-10">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <svg class="h-8 w-8 text-blue-500" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
-                </svg>
-                <span class="ml-2 text-2xl font-bold text-gray-800">Tale Index</span>
+                <img src="logo.png" alt="Tale Index Logo" class="h-8 w-auto mr-2">
+                <span class="text-2xl font-bold text-gray-800">Tale Index</span>
             </div>
             <div class="hidden md:flex items-center space-x-4">
                 <a href="#features" class="text-gray-600 hover:text-blue-500">Features</a>
