--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tale Index - AI-Driven Storytelling Insights</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://drive.google.com/uc?export=view&id=1-HUk0m0b98Yw0dCeL-ZJjgYaqim6XOCy">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -30,13 +30,12 @@
             background-position: center;
         }
     </style>
-    <link rel="icon" href="https://drive.google.com/uc?export=view&id=1-HUk0m0b98Yw0dCeL-ZJjgYaqim6XOCy" type="image/x-icon">
 </head>
 <body class="bg-gray-100">
     <header class="bg-white bg-opacity-90 shadow-sm fixed w-full z-10">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="logo.png" alt="Tale Index Logo" class="h-8 w-auto mr-2">
+                <img href="https://drive.google.com/uc?export=view&id=1-HUk0m0b98Yw0dCeL-ZJjgYaqim6XOCy" alt="Tale Index Logo" class="h-8 w-auto mr-2">
                 <span class="text-2xl font-bold text-gray-800">Tale Index</span>
             </div>
             <div class="hidden md:flex items-center space-x-4">
