--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="bg-white bg-opacity-90 shadow-sm fixed w-full z-10">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img href="https://drive.google.com/uc?export=view&id=1-HUk0m0b98Yw0dCeL-ZJjgYaqim6XOCy" alt="Tale Index Logo" class="h-8 w-auto mr-2">
+                <img src="logo.png" alt="Tale Index Logo" class="h-8 w-auto mr-2">
                 <span class="text-2xl font-bold text-gray-800">Tale Index</span>
             </div>
             <div class="hidden md:flex items-center space-x-4">
