Generate preview image for whatsapp link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TaleIndex - AI-Driven Storytelling Insights</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="TaleIndex - AI-Driven Storytelling Insights" />
+    <meta property="og:description" content="Unlock the power of storytelling with AI and neuroscience-driven insights from Tale Index." />
+    <meta property="og:image" content="https://taleindex.me/assets/preview-image.png" />
+    <meta property="og:url" content="https://taleindex.me" />
+    <meta property="og:type" content="website" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
