Bug fix preview

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="TaleIndex - AI-Driven Storytelling Insights" />
     <meta property="og:description" content="Unlock the power of storytelling with AI and neuroscience-driven insights from Tale Index." />
-    <meta property="og:image" content="https://taleindex.me/assets/preview-image.png" />
+    <meta property="og:image" content="https://taleindex.me/assets/preview-image.jpg" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="640" />
     <meta property="og:url" content="https://taleindex.me" />
