Add intro video in homepage

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             <div class="container mx-auto px-6">
                 <h2 class="text-3xl font-bold text-center mb-8 text-white">About Tale Index</h2>
                 <p class="text-white text-center max-w-2xl mx-auto">At Tale Index, we encourage you to craft marketing strategies that truly engage your audience. Our SaaS platform will provide you with a performance in the market before get published. Using the unique Tale index, you can measure, adjust and maximise the impact of the story.</p>
+                <div style="position: relative; overflow: hidden; padding-top: 56.25%;"><iframe src="https://share.synthesia.io/embeds/videos/5238af4c-cc16-4b1a-a8a8-63bdfc0e6237" loading="lazy" title="Synthesia video player - tale index" allowfullscreen allow="encrypted-media; fullscreen;" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0; overflow:hidden;"></iframe></div>
             </div>
         </section>
 
