--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="container mx-auto px-6 text-center">
                 <div class="bg-black bg-opacity-50 p-8 rounded-lg inline-block">
                     <h1 class="text-4xl md:text-6xl font-bold mb-4">Unlock the power of storytelling</h1>
-                    <p class="text-xl mb-8">with AI and NeuroScience Driven Insights</p>
+                    <p class="text-xl mb-8">atk2: with AI and NeuroScience Driven Insights</p>
                     <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-full font-semibold hover:bg-blue-700 transition duration-300">Get Started</a>
                 </div>
             </div>
