--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <a href="#features" class="text-gray-600 hover:text-blue-500">Features</a>
                 <a href="#about" class="text-gray-600 hover:text-blue-500">About</a>
                 <a href="#contact" class="text-gray-600 hover:text-blue-500">Contact</a>
+                <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded-full font-semibold hover:bg-blue-700 transition duration-300">Try Now</a>
             </div>
         </nav>
     </header>
