--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TaleIndex Dashboard - AI-Driven Storytelling Insights</title>
+    <title>TaleIndex Dashboard - Evaluate Your Marketing Scripts</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -23,36 +23,47 @@
                 <a href="index.html">
                     <img src="assets/logo.png" alt="Tale Index Logo" class="h-8 w-auto mr-2">
                 </a>
-                <span class="text-2xl font-bold text-gray-800">TaleIndex Dashboard</span>
+                <span class="text-2xl font-bold text-gray-800">TaleIndex</span>
             </div>
             <div class="hidden md:flex items-center space-x-4">
-                <a href="index.html" class="text-gray-600 hover:text-blue-500">Home</a>
+                <a href="index.html#features" class="text-gray-600 hover:text-blue-500">Features</a>
+                <a href="index.html#about" class="text-gray-600 hover:text-blue-500">About</a>
+                <a href="index.html#contact" class="text-gray-600 hover:text-blue-500">Contact</a>
+                <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded-full font-semibold hover:bg-blue-700 transition duration-300">Try Now</a>
             </div>
         </nav>
     </header>
 
-    <main class="pt-20">
+    <main class="pt-20 min-h-screen bg-gray-100">
         <div class="container mx-auto px-6 py-8">
-            <div class="bg-white shadow-md rounded-lg p-6">
-                <h1 class="text-3xl font-bold mb-6">Try TaleIndex</h1>
-                <form id="uploadForm" class="space-y-4">
-                    <div>
-                        <label for="file" class="block text-sm font-medium text-gray-700 mb-1">
-                            Upload File
-                        </label>
-                        <input type="file" id="file" name="file" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+            <h1 class="text-4xl font-bold text-center mb-2">Evaluate Your Marketing Scripts</h1>
+            <p class="text-xl text-gray-600 text-center mb-8">
+                Upload your marketing scripts to get detailed analysis and insights.
+            </p>
+
+            <div class="bg-white shadow-md rounded-lg p-6 mb-8">
+                <h2 class="text-2xl font-semibold mb-4">Upload File</h2>
+                <form id="uploadForm" class="flex flex-col md:flex-row items-center space-y-4 md:space-y-0 md:space-x-4">
+                    <div class="flex-grow w-full md:w-auto">
+                        <label for="file" class="sr-only">Choose file</label>
+                        <input type="file" id="file" name="file" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
                     </div>
-                    <div>
-                        <label for="query" class="block text-sm font-medium text-gray-700 mb-1">
-                            Query
-                        </label>
-                        <textarea id="query" name="query" rows="3" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter your query here" required></textarea>
-                    </div>
-                    <button type="submit" class="w-full bg-blue-600 text-white px-4 py-2 rounded-md font-semibold hover:bg-blue-700 transition duration-300">Submit</button>
+                    <button type="submit" class="w-full md:w-auto bg-blue-600 text-white px-6 py-2 rounded-md font-semibold hover:bg-blue-700 transition duration-300">Evaluate</button>
                 </form>
-                <div id="result" class="mt-8 hidden">
-                    <h2 class="text-xl font-semibold mb-2">Result:</h2>
-                    <p id="resultContent" class="whitespace-pre-wrap bg-gray-100 p-4 rounded-md"></p>
+            </div>
+
+            <div id="results" class="grid grid-cols-1 md:grid-cols-2 gap-6 hidden">
+                <div class="bg-white shadow-md rounded-lg p-6">
+                    <h2 class="text-2xl font-semibold mb-2">Word Count</h2>
+                    <p id="wordCount" class="text-4xl font-bold">-</p>
+                </div>
+                <div class="bg-white shadow-md rounded-lg p-6">
+                    <h2 class="text-2xl font-semibold mb-2">Readability Score</h2>
+                    <p id="readabilityScore" class="text-4xl font-bold">-</p>
+                </div>
+                <div class="bg-white shadow-md rounded-lg p-6 md:col-span-2">
+                    <h2 class="text-2xl font-semibold mb-2">Sentiment Analysis</h2>
+                    <p id="sentimentAnalysis" class="text-4xl font-bold">-</p>
                 </div>
             </div>
         </div>
@@ -80,14 +91,13 @@
             e.preventDefault();
             const formData = new FormData(this);
             const submitButton = this.querySelector('button[type="submit"]');
-            const resultDiv = document.getElementById('result');
-            const resultContent = document.getElementById('resultContent');
+            const resultsDiv = document.getElementById('results');
 
             submitButton.disabled = true;
-            submitButton.textContent = 'Processing...';
+            submitButton.textContent = 'Evaluating...';
 
             try {
-                const response = await fetch('/api/process', {
+                const response = await fetch('/api/evaluate-script', {
                     method: 'POST',
                     body: formData
                 });
@@ -97,15 +107,16 @@
                 }
 
                 const data = await response.json();
-                resultContent.textContent = data.result;
-                resultDiv.classList.remove('hidden');
+                document.getElementById('wordCount').textContent = data.wordCount.toLocaleString();
+                document.getElementById('readabilityScore').textContent = data.readabilityScore.toFixed(1);
+                document.getElementById('sentimentAnalysis').textContent = data.sentimentAnalysis;
+                resultsDiv.classList.remove('hidden');
             } catch (error) {
                 console.error('Error:', error);
-                resultContent.textContent = 'An error occurred while processing your request.';
-                resultDiv.classList.remove('hidden');
+                alert('An error occurred while processing your request. Please try again.');
             } finally {
                 submitButton.disabled = false;
-                submitButton.textContent = 'Submit';
+                submitButton.textContent = 'Evaluate';
             }
         });
     </script>
