--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TaleIndex Dashboard - Evaluate Your Marketing Scripts</title>
+    <title>TaleIndex Dashboard - Evaluate Your Scripts</title>
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -33,9 +33,9 @@
 
     <main class="pt-20 min-h-screen bg-gray-100">
         <div class="container mx-auto px-6 py-8">
-            <h1 class="text-4xl font-bold text-center mb-2">Evaluate Your Marketing Scripts</h1>
+            <h1 class="text-4xl font-bold text-center mb-2">Evaluate Your Scripts</h1>
             <p class="text-xl text-gray-600 text-center mb-8">
-                Upload your marketing scripts to get detailed analysis and insights.
+                Upload your scripts to get detailed analysis and insights.
             </p>
 
             <div class="bg-white shadow-md rounded-lg p-6 mb-8">
