--- a/dashboard.html
+++ b/dashboard.html
@@ -27,9 +27,7 @@
                 <span class="text-2xl font-bold text-gray-800">TaleIndex</span>
             </div>
             <div class="hidden md:flex items-center space-x-4">
-                <a href="index.html#features" class="text-gray-600 hover:text-blue-500">Features</a>
-                <a href="index.html#about" class="text-gray-600 hover:text-blue-500">About</a>
-                <a href="index.html#contact" class="text-gray-600 hover:text-blue-500">Contact</a>
+                <a href="index.html" class="text-gray-600 hover:text-blue-500">Home</a>
                 <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded-full font-semibold hover:bg-blue-700 transition duration-300">Try Now</a>
             </div>
         </nav>
