--- a/dashboard.html
+++ b/dashboard.html
@@ -94,7 +94,7 @@
             submitButton.textContent = 'Analyzing...';
 
             try {
-                const response = await fetch('/api/analyze-marketing', {
+                const response = await fetch('/api/analyze-script', {
                     method: 'POST',
                     body: formData
                 });
