--- a/dashboard.html
+++ b/dashboard.html
@@ -19,80 +19,135 @@
 </head>
 <body class="bg-gray-100">
 
-    <main class="pt-20 min-h-screen bg-gray-100">
+    <!-- HEADER (Consistent with Home Page) -->
+    <header class="bg-blue-600 py-4 shadow-md">
+        <div class="container mx-auto flex justify-between items-center">
+            <a href="/" class="text-white text-3xl font-bold">TaleIndex</a>
+            <nav>
+                <a href="/" class="text-white text-lg mr-6">Home</a>
+                <a href="/dashboard.html" class="text-white text-lg">Dashboard</a>
+            </nav>
+        </div>
+    </header>
+
+    <!-- MAIN CONTENT -->
+    <main class="pt-10">
         <div class="container mx-auto px-6 py-8">
-            <h1 class="text-4xl font-bold text-center mb-2">Analysis Results</h1>
-            
-            <div class="bg-white shadow-md rounded-lg p-6 mb-8">
-                <h2 class="text-2xl font-semibold mb-4">Overall Score</h2>
-                <p id="overallScore" class="text-lg font-bold text-center"></p>
+            <h1 class="text-4xl font-bold text-center mb-4">Upload Brief & Script for Analysis</h1>
+
+            <!-- File Input for Brief and Script -->
+            <div class="bg-white p-8 shadow-md rounded-lg mb-8">
+                <form id="analysisForm">
+                    <div class="mb-4">
+                        <label for="brief" class="block text-lg font-semibold mb-2">Upload Brief</label>
+                        <input type="file" id="brief" class="w-full border border-gray-300 p-2 rounded-md" required>
+                    </div>
+                    <div class="mb-4">
+                        <label for="script" class="block text-lg font-semibold mb-2">Upload Script</label>
+                        <input type="file" id="script" class="w-full border border-gray-300 p-2 rounded-md" required>
+                    </div>
+                    <button id="analyzeButton" class="w-full bg-blue-600 text-white px-6 py-2 rounded-md font-semibold hover:bg-blue-700 transition duration-300">Analyze</button>
+                </form>
             </div>
 
-            <!-- Sentiment Breakdown Chart -->
-            <div class="bg-white shadow-md rounded-lg p-6 mb-8">
-                <h2 class="text-2xl font-semibold mb-4">Sentiment Breakdown (VADER Analysis)</h2>
-                <canvas id="sentimentChart"></canvas>
-            </div>
+            <!-- Results Section -->
+            <div id="resultsSection" class="hidden bg-white p-8 shadow-md rounded-lg">
+                <h2 class="text-3xl font-semibold mb-4">Analysis Results</h2>
 
-            <!-- Key Metrics Scores Chart -->
-            <div class="bg-white shadow-md rounded-lg p-6 mb-8">
-                <h2 class="text-2xl font-semibold mb-4">Key Metrics Scores</h2>
-                <canvas id="metricsChart"></canvas>
-            </div>
+                <!-- Overall Score -->
+                <div class="mb-8">
+                    <h3 class="text-2xl font-semibold mb-2">Overall Score</h3>
+                    <p id="overallScore" class="text-lg font-bold text-center"></p>
+                </div>
 
-            <button id="downloadPdf" class="w-full bg-green-600 text-white px-6 py-2 rounded-md font-semibold hover:bg-green-700 transition duration-300">Download Report as PDF</button>
+                <!-- Sentiment Breakdown Chart -->
+                <div class="mb-8">
+                    <h3 class="text-2xl font-semibold mb-4">Sentiment Breakdown (VADER Analysis)</h3>
+                    <canvas id="sentimentChart"></canvas>
+                </div>
+
+                <!-- Key Metrics Scores Chart -->
+                <div class="mb-8">
+                    <h3 class="text-2xl font-semibold mb-4">Key Metrics Scores</h3>
+                    <canvas id="metricsChart"></canvas>
+                </div>
+
+                <!-- Download Report Button -->
+                <button id="downloadPdf" class="w-full bg-green-600 text-white px-6 py-2 rounded-md font-semibold hover:bg-green-700 transition duration-300">Download Complete Report</button>
+            </div>
         </div>
     </main>
 
     <script>
-        document.addEventListener('DOMContentLoaded', async function() {
+        document.getElementById('analysisForm').addEventListener('submit', async function(event) {
+            event.preventDefault();
+
+            // Get files from input fields
+            const briefFile = document.getElementById('brief').files[0];
+            const scriptFile = document.getElementById('script').files[0];
+
+            // Create FormData to send the files
+            const formData = new FormData();
+            formData.append('brief', briefFile);
+            formData.append('script', scriptFile);
+
             try {
-                const response = await fetch('https://taleindex.me/api/analyze-script', {
-                    method: 'POST'
+                // Send POST request to /api/analyze-script
+                const response = await fetch('/api/analyze-script', {
+                    method: 'POST',
+                    body: formData,
                 });
 
                 const data = await response.json();
+                
+                if (response.ok) {
+                    document.getElementById('resultsSection').classList.remove('hidden');
 
-                // Display overall score
-                document.getElementById('overallScore').innerText = `Overall Score: ${data.alignmentScore}/10`;
+                    // Display overall score
+                    document.getElementById('overallScore').innerText = `Overall Score: ${data.alignmentScore}/10`;
 
-                // Render Sentiment Breakdown Chart
-                const sentimentCtx = document.getElementById('sentimentChart').getContext('2d');
-                new Chart(sentimentCtx, {
-                    type: 'radar',
-                    data: {
-                        labels: ['Positive', 'Negative', 'Neutral', 'Compound'],
-                        datasets: [{
-                            label: 'Sentiment Breakdown',
-                            data: [data.sentimentBreakdown.positive, data.sentimentBreakdown.negative, data.sentimentBreakdown.neutral, data.sentimentBreakdown.compound],
-                            backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                            borderColor: 'rgba(54, 162, 235, 1)',
-                            borderWidth: 1
-                        }]
-                    }
-                });
+                    // Render Sentiment Breakdown Chart
+                    const sentimentCtx = document.getElementById('sentimentChart').getContext('2d');
+                    new Chart(sentimentCtx, {
+                        type: 'radar',
+                        data: {
+                            labels: ['Positive', 'Negative', 'Neutral', 'Compound'],
+                            datasets: [{
+                                label: 'Sentiment Breakdown',
+                                data: [data.sentimentBreakdown.positive, data.sentimentBreakdown.negative, data.sentimentBreakdown.neutral, data.sentimentBreakdown.compound],
+                                backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                                borderColor: 'rgba(54, 162, 235, 1)',
+                                borderWidth: 1
+                            }]
+                        }
+                    });
 
-                // Render Key Metrics Chart
-                const metricsCtx = document.getElementById('metricsChart').getContext('2d');
-                new Chart(metricsCtx, {
-                    type: 'radar',
-                    data: {
-                        labels: ['Clarity', 'Relevance', 'Engagement', 'Persuasiveness', 'Creativity', 'Consistency', 'Emotional Impact'],
-                        datasets: [{
-                            label: 'Key Metrics Scores',
-                            data: [data.keyMetrics.clarity, data.keyMetrics.relevance, data.keyMetrics.engagement, data.keyMetrics.persuasiveness, data.keyMetrics.creativity, data.keyMetrics.consistency, data.keyMetrics.emotionalImpact],
-                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                            borderColor: 'rgba(255, 99, 132, 1)',
-                            borderWidth: 1
-                        }]
-                    }
-                });
+                    // Render Key Metrics Chart
+                    const metricsCtx = document.getElementById('metricsChart').getContext('2d');
+                    new Chart(metricsCtx, {
+                        type: 'radar',
+                        data: {
+                            labels: ['Clarity', 'Relevance', 'Engagement', 'Persuasiveness', 'Creativity', 'Consistency', 'Emotional Impact'],
+                            datasets: [{
+                                label: 'Key Metrics Scores',
+                                data: [data.keyMetrics.clarity, data.keyMetrics.relevance, data.keyMetrics.engagement, data.keyMetrics.persuasiveness, data.keyMetrics.creativity, data.keyMetrics.consistency, data.keyMetrics.emotionalImpact],
+                                backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                                borderColor: 'rgba(255, 99, 132, 1)',
+                                borderWidth: 1
+                            }]
+                        }
+                    });
+                } else {
+                    alert(data.error || 'An error occurred during analysis.');
+                }
+
             } catch (error) {
                 console.error('Error:', error);
-                alert('An error occurred while processing your request. Please try again.');
+                alert('An error occurred while processing your request.');
             }
         });
 
+        // Download PDF Functionality
         document.getElementById('downloadPdf').addEventListener('click', function() {
             const { jsPDF } = window.jspdf;
             const doc = new jsPDF();
@@ -103,7 +158,5 @@
             doc.save('marketing-analysis-report.pdf');
         });
     </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
