--- a/dashboard.html
+++ b/dashboard.html
@@ -16,6 +16,8 @@
             background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         }
     </style>
+    <!-- Other head content -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-gray-100">
 
