--- a/dashboard.html
+++ b/dashboard.html
@@ -20,16 +20,17 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-gray-100">
-
-    <!-- HEADER (Consistent with Home Page) -->
-    <header class="bg-blue-600 py-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="/" class="text-white text-3xl font-bold">TaleIndex</a>
-            <nav>
-                <a href="/" class="text-white text-lg mr-6">Home</a>
-                <a href="/dashboard.html" class="text-white text-lg">Dashboard</a>
-            </nav>
-        </div>
+    <header class="bg-white bg-opacity-90 shadow-sm fixed w-full z-10">
+        <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
+            <div class="flex items-center">
+                <img src="assets/logo.png" alt="Tale Index Logo" class="h-8 w-auto mr-2">
+                <span class="text-2xl font-bold text-gray-800">TaleIndex</span>
+            </div>
+            <div class="hidden md:flex items-center space-x-4">
+                <a href="#" class="text-gray-600 hover:text-blue-500">Home</a>
+                <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded-full font-semibold hover:bg-blue-700 transition duration-300">Try Now</a>
+            </div>
+        </nav>
     </header>
 
     <!-- MAIN CONTENT -->
