--- a/dashboard.html
+++ b/dashboard.html
@@ -22,9 +22,9 @@
 <body class="bg-gray-100">
     <header class="bg-white bg-opacity-90 shadow-sm fixed w-full z-10">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <div href="/" class="flex items-center">
-                <img src="assets/logo.png" alt="Tale Index Logo" class="h-8 w-auto mr-2">
-                <span class="text-2xl font-bold text-gray-800">TaleIndex</span>
+            <div class="flex items-center">
+                <img href="/"  src="assets/logo.png" alt="Tale Index Logo" class="h-8 w-auto mr-2">
+                <span href="/" class="text-2xl font-bold text-gray-800">TaleIndex</span>
             </div>
             <div class="hidden md:flex items-center space-x-4">
                 <a href="/" class="text-gray-600 hover:text-blue-500">Home</a>
