--- a/dashboard.html
+++ b/dashboard.html
@@ -29,53 +29,32 @@
         </div>
     </nav>
 
-    <main class="pt-20 pb-10">
-        <div class="container mx-auto px-4">
-            <h1 class="text-4xl font-bold text-center mb-8 text-gray-800">Upload Brief & Script for Analysis</h1>
-            
-            <div class="bg-white p-8 custom-shadow rounded-lg mb-8">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+    <main class="pt-20 pb-12">
+        <div class="max-w-4xl mx-auto px-4">
+            <h1 class="text-3xl font-bold text-center mb-10">Upload Brief & Script for Analysis</h1>
+            <div class="bg-white p-6 rounded-lg shadow">
+                <form id="uploadForm" class="space-y-6">
                     <div>
-                        <label for="brief" class="block text-sm font-medium text-gray-700 mb-2">Upload Brief</label>
-                        <input type="file" id="brief" name="brief" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                        <label for="brief" class="text-sm font-medium text-gray-700">Upload Brief</label>
+                        <input type="file" id="brief" name="brief" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
                     </div>
                     <div>
-                        <label for="script" class="block text-sm font-medium text-gray-700 mb-2">Upload Script</label>
-                        <input type="file" id="script" name="script" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500">
+                        <label for="script" class="text-sm font-medium text-gray-700">Upload Script</label>
+                        <input type="file" id="script" name="script" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
                     </div>
-                </div>
-                <button id="analyzeBtn" class="mt-6 w-full bg-blue-600 text-white px-4 py-2 rounded-md font-semibold hover:bg-blue-700 transition duration-300">Analyze</button>
+                    <button type="submit" class="w-full bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Analyze</button>
+                </form>
             </div>
 
-            <!-- Results Section -->
-            <div id="resultsSection" class="hidden bg-white p-8 custom-shadow rounded-lg">
-                <h2 class="text-3xl font-semibold mb-6 text-gray-800">Analysis Results</h2>
-                
-                <!-- Overall Score -->
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                    <div class="bg-gray-50 p-6 rounded-lg custom-shadow">
-                        <h3 class="text-xl font-semibold mb-4 text-gray-700">Overall Score</h3>
-                        <div id="overallScore" class="text-5xl font-bold text-blue-600 mb-2">3/10</div>
-                        <div class="w-full bg-gray-200 rounded-full h-2.5">
-                            <div class="bg-blue-600 h-2.5 rounded-full" style="width: 30%"></div>
-                        </div>
-                    </div>
+            <div id="resultsSection" class="mt-10 bg-white p-6 rounded-lg shadow hidden">
+                <h2 class="text-2xl font-semibold mb-4">Analysis Results</h2>
+                <div id="overallScore" class="text-5xl font-bold text-blue-600">3/10</div>
+                <div class="mt-4 w-full bg-gray-200 rounded-full h-2.5">
+                    <div class="bg-blue-600 h-2.5 rounded-full" style="width: 30%"></div>
                 </div>
-
-                <!-- Sentiment Breakdown Chart -->
-                <div class="mb-8">
-                    <h3 class="text-2xl font-semibold mb-4">Sentiment Breakdown (VADER Analysis)</h3>
-                    <canvas id="sentimentChart"></canvas>
-                </div>
-
-                <!-- Key Metrics Scores Chart -->
-                <div class="mb-8">
-                    <h3 class="text-2xl font-semibold mb-4">Key Metrics Scores</h3>
-                    <canvas id="metricsChart"></canvas>
-                </div>
-
-                <!-- Download Report Button -->
-                <button id="downloadPdf" class="w-full bg-green-600 text-white px-6 py-2 rounded-md font-semibold hover:bg-green-700 transition duration-300">Download Complete Report</button>
+                <canvas id="sentimentChart" class="mt-6"></canvas>
+                <canvas id="metricsChart" class="mt-6"></canvas>
+                <button id="downloadPdf" class="mt-4 w-full bg-green-600 text-white px-6 py-2 rounded-md hover:bg-green-700">Download Complete Report</button>
             </div>
         </div>
     </main>
