--- a/dashboard.html
+++ b/dashboard.html
@@ -42,7 +42,7 @@
                         <label for="script" class="text-sm font-medium text-gray-700">Upload Script</label>
                         <input type="file" id="script" name="script" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
                     </div>
-                    <button type="submit" class="w-full bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Analyze</button>
+                    <button type="submit" id="analyzeBtn" class="w-full bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Analyze</button>
                 </form>
             </div>
 
