--- a/dashboard.html
+++ b/dashboard.html
@@ -36,11 +36,11 @@
                 <form id="uploadForm" class="space-y-6">
                     <div>
                         <label for="brief" class="text-sm font-medium text-gray-700">Upload Brief</label>
-                        <input type="file" id="brief" name="brief" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
+                        <input type="file" id="brief" name="brief" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500" required>
                     </div>
                     <div>
                         <label for="script" class="text-sm font-medium text-gray-700">Upload Script</label>
-                        <input type="file" id="script" name="script" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
+                        <input type="file" id="script" name="script" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500" required>
                     </div>
                     <button type="submit" id="analyzeBtn" class="w-full bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Analyze</button>
                 </form>
