--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -65,6 +65,10 @@
         let metricsChartInstance = null;
 
         document.getElementById('analyzeBtn').addEventListener('click', async function(event) {
+            if (!document.getElementById('uploadForm').checkValidity()) {
+                document.getElementById('uploadForm').reportValidity();
+                return;
+            }
             event.preventDefault();
 
             const briefFile = document.getElementById('brief').files[0];
