--- a/dashboard.html
+++ b/dashboard.html
@@ -130,7 +130,7 @@
                     });
 
                     if (metricsChartInstance) {
-                        metricsChartInstance.destroy.
+                        metricsChartInstance.destroy();
                     }
 
                     const metricsCtx = document.getElementById('metricsChart').getContext('2d');
