--- a/dashboard.html
+++ b/dashboard.html
@@ -66,6 +66,7 @@
                 </form>
             </div>
             <div id="resultsSection" class="results-container custom-shadow hidden">
+                <div class="text-5xl font-bold text-blue-600" id="overallScore">0/10</div>
                 <div class="chart-container">
                     <h2 class="text-2xl font-semibold mb-4">Sentiment Analysis</h2>
                     <canvas id="sentimentChart" class="mt-6"></canvas>
